# othellogame

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  UNIFICATION_NOTES.md  UNIFICATION_PLAN.md  build.sh  build_all.sh  check.sh  check_all.sh  common.sh  compare_output.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: black.yml  cargo.yml  cmake.yml  dotnet.yml  flake8.yml  go.yml  gradle.yml  isort.yml  java.yml  kotlin-native.yml  kotlin.yml  python.yml  ruff.yml  rust.yml  swift.yml  typescript.yml
clojure/: CHANGELOG.md  README.md  build.clj  deps.edn  pom.xml
clojure/src/othello/: othello.clj
clojure/test/othello/: othello_test.clj
cpp/: .clang-format  CMakeLists.txt  README.md  build.sh  format.sh  test.sh
cpp/src/: board.cpp  board.hpp  colorprint.hpp  main.cpp  models.cpp  models.hpp  othello.cpp  othello.hpp  player.cpp  player.hpp  settings.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp  version.hpp
cpp/tests/: CMakeLists.txt  test_board.cpp  test_models.cpp  test_player.cpp  test_utils.cpp
csharp/: .csharpierrc.yaml  .editorconfig  .gitignore  Othello.sln  README.md  build.sh
csharp/Othello/: Board.cs  ColorPrint.cs  Main.cs  Models.cs  Othello.cs  Othello.csproj  Player.cs  Settings.cs  Utils.cs  Version.cs  VersionInfo.cs
csharp/Othello.Tests/: Othello.Tests.csproj  TestBoard.cs  TestModels.cs  TestPlayer.cs  TestUtils.cs
go/: .gitignore  .golangci.yml  README.md  build.sh  format.sh  go.mod  go.sum  main.go
go/othello/: board.go  board_internal_test.go  board_test.go  colorprint.go  models.go  models_internal_test.go  models_test.go  othello.go  player.go  player_internal_test.go  player_test.go  settings.go  utils.go  utils_internal_test.go  utils_test.go  version.go
haskell/: LICENSE  README.md  build.sh  othello.cabal
haskell/app/: ColorPrint.hs  Main.hs
java/: .editorconfig  .gitignore  README.md  build.gradle.kts  build.sh  eclipse-format.xml  othello_java.sh  settings.gradle.kts
java/app/: build.gradle.kts
kotlin/: .editorconfig  .gitignore  README.md  build.gradle.kts  build.sh  format.sh  gradle.properties  othello_kotlin.sh  settings.gradle.kts
kotlin-native/: .editorconfig  .gitignore  README.md  build.gradle.kts  build.sh  gradle.properties  othello_kotlin.sh  settings.gradle.kts
kotlin-native/gradle/: libs.versions.toml
kotlin/app/: build.gradle.kts
node/: .editorconfig  README.md  cli.js  package-lock.json  package.json  tsconfig.json
node/src/: othello.js  othello.ts
othello_cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  Othello.sln  Othello.vcxproj  Othello.vcxproj.filters  README.md  build.sh  format_code.sh  othello
othello_cpp/src/: board.cpp  board.hpp  colorprint.cpp  colorprint.hpp  main.cpp  othello.cpp  othello.hpp  player.cpp  player.hpp  util.cpp  util.hpp  utils.cpp  utils.hpp  version.hpp
othello_csharp/: .editorconfig  README.md  build.sh
othello_csharp/Othello/: Board.cs  ColorPrint.cs  Othello.cs  Othello.csproj  Player.cs  Util.cs  Utils.cs  Version.cs
othello_go/: README.md  board.go  build.sh  colorprint.go  go.mod  go.sum  main.go  othello.go  player.go  update_version.sh  utils.go
othello_go/othello/: board.go  colorprint.go  othello.go  player.go  utils.go  version.go
othello_haskell/: .gitignore  README.md  build.sh  othello.cabal
othello_haskell/app/: Main.hs
othello_kotlin/: .editorconfig  .gitignore  README.md  build.sh  gradle.properties  othello_kotlin.sh  settings.gradle.kts
othello_kotlin/app/: build.gradle.kts
othello_python/: README.md  __init__.py  board.py  color.py  colorprint.py  main.py  othello.bat  othello.py  othello.sh  othello_python.sh  player.py  pyproject.toml  requirements.txt  setup.cfg  util.py  utils.py
othello_python/othello/: board.py  colorprint.py  othello.py  player.py  util.py  utils.py  version.py
othello_python/test/: test_board.py  test_othello.py  test_player.py  test_util.py
othello_rust/: .rustfmt.toml  Cargo.toml  README.md  build.sh
othello_rust/src/: board.rs  colorprint.rs  main.rs  othello.rs  player.rs  utils.rs
othello_swift/: .gitignore  .swiftformat  Package.resolved  Package.swift  README.md  build.sh
othello_swift/Sources/BuildInfo/: version.c
othello_swift/Sources/othello_swift/: board.swift  colorprint.swift  main.swift  othello.swift  player.swift  utils.swift
othello_zig/: .gitignore  README.md  build.zig
python/: README.md  build.sh  format.sh  othello.bat  othello_python.sh  pyproject.toml  test.sh
python/othello/: __init__.py  board.py  colorprint.py  models.py  othello.py  player.py  settings.py  types.py  utils.py  version.py
python/test/: test_util.py
python/tests/: test_board.py  test_models.py  test_othello.py  test_player.py  test_types.py  test_utils.py
rust/: .rustfmt.toml  Cargo.toml  README.md  build.rs  build.sh  test.sh
rust/src/: board.rs  colorprint.rs  main.rs  models.rs  othello.rs  player.rs  settings.rs  types.rs  utils.rs  version.rs
swift/: .swiftformat  Package.resolved  Package.swift  README.md  build.sh
swift/Plugins/VersionGeneratorPlugin/: generate_version.sh  plugin.swift
swift/Sources/Othello/: board.swift  colorprint.swift  main.swift  models.swift  othello.swift  player.swift  settings.swift  utils.swift  version.swift
swift/Sources/OthelloLib/: board.swift  colorprint.swift  models.swift  othello.swift  player.swift  settings.swift  utils.swift  version.swift
swift/Sources/VersionInfo/: placeholder.swift  versionInfo.swift
swift/Sources/othello_swift/: board.swift  (+8 more)
typescript/: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .prettierrc  README.md  build.sh  eslint.config.mjs  othello_typescript.sh  package-lock.json  package.json  tsconfig.json
typescript/src/: board.ts  colorprint.ts  main.ts  models.ts  othello.ts  player.ts  settings.ts  utils.ts  version.ts
typescript/tests/: board.test.ts  models.test.ts  player.test.ts  utils.test.ts
zig/: README.md  build.sh  build.zig  build.zig.zon
zig/src/: colorprint.zig  main.zig  utils.zig  version.zig
(+76 files in other folders)
