[package]
authors = ["Esgrove <esgrove@outlook.com>"]
description = "A simple Othello CLI game implementation."
edition = "2021"
license = "MIT"
name = "othello_rust"
readme = "README.md"
repository = "https://github.com/Esgrove/othellogame"
version = "1.5.0"
build = "build.rs"

[dependencies]
anyhow = "1.0.75"
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
env_logger = "0.10.1"
log = "0.4.20"
rand = "0.8.5"
sha2 = "0.10.8"
shadow-rs = "0.24.1"

[build-dependencies]
shadow-rs = "0.24.1"

[[bin]]
name = "othello_rust"
path = "src/main.rs"
