[project]
name = "othello_python"
version = "3.1.0"
description = "A simple Othello CLI game implementation in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Akseli Lukkarila", email = "esgrove@outlook.com" },
]
dependencies = [
    "click",
    "colorama",
]

[project.urls]
Repository = "https://github.com/Esgrove/othellogame"

[project.scripts]
othello = "othello.othello:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff"
]
lint = [
    "pytest",
    "pytest-cov"
]

[tool.uv.build-backend]
module-name = "othello"
module-root = ""

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
include = ["*.py", "*.pyi", "**/pyproject.toml"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W", "N", "UP"]
ignore = []
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
# https://docs.astral.sh/ruff/settings/#isort
case-sensitive = false
combine-as-imports = true
lines-between-types = 1
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
