# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "othello_rust"
version = "1.11.0"
authors = ["Esgrove <esgrove@outlook.com>"]
description = "A simple Othello CLI game implementation in Rust"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/othellogame"
build = "build.rs"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.102"
base16ct = { version = "1.0.0", features = ["alloc"] }
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
rand = "0.10.0"
sha2 = "0.10.9"

[[bin]]
name = "othello_rust"
path = "src/main.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
unwrap_used = "deny"
enum_glob_use = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
